Add dedicated integration tests for using DWYU inside a custom rule

--- a/test/aspect/recursion/BUILD
+++ b/test/aspect/recursion/BUILD
@@ -1,5 +1,3 @@
-load("//test/aspect/recursion:rule.bzl", "dwyu_rule_direct", "dwyu_rule_recursive", "dwyu_rule_recursive_with_impl_deps")
-
 # Has a diamond dependency towards C through A and B
 # main specifies its dependencies correctly, but C has an error
 cc_binary(
@@ -11,15 +9,15 @@ cc_binary(
     ],
 )
 
-dwyu_rule_direct(
-    name = "dwyu_direct_main",
-    deps = [":main"],
+cc_library(
+    name = "use_impl_deps",
+    srcs = ["use_impl_deps.cpp"],
+    implementation_deps = [":a"],
 )
 
-dwyu_rule_recursive(
-    name = "dwyu_recursive_main",
-    deps = [":main"],
-)
+##
+## Support Targets
+##
 
 cc_library(
     name = "a",
@@ -50,15 +48,4 @@ cc_library(
 cc_library(
     name = "e",
     hdrs = ["e.h"],
-)
-
-cc_library(
-    name = "use_impl_deps",
-    srcs = ["use_impl_deps.cpp"],
-    implementation_deps = [":a"],
-)
-
-dwyu_rule_recursive_with_impl_deps(
-    name = "dwyu_recursive_use_impl_deps",
-    deps = [":use_impl_deps"],
 )
