--- a/.bazelrc
+++ b/.bazelrc
@@ -1,13 +1,12 @@
 # Always tell why tests fail
 test --test_output=errors
 
-# We use Bazel's modern dependency management system for development.
-build --enable_bzlmod=true
-
-# We are not yet sure if we really want to lock the bzlmod resolution down given we test with various Bazel versions
-# and configurations. It seems the main benefits of the lock file are not having to reanalyze the central registry
-# when working without a cached workspace and being safeguarded against changed or yanked modules in the central
-# registry. Both don't matter much to us right now.
+# The performance gains offered by the lockfile are minimal for us.
+# Pinning the dependencies should be superfluous from a reproducibility perspective as the central registry is supposed
+# to be immutable for a module X in version Y after it has ben registered with the registry (ignoring the possibility of
+# yanking a module). Furthermore, the module resolution is deterministic.
+# However, there are several open issues suggesting the lock file will change in one way or another.
+# Thus, we don't use the bzlmod locking yet.
 build --lockfile_mode=off
 
 # When working with hermetic Python toolchains, supporting the legacy runfiles layout is needlessly wasting resources.
