--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,3 +61,7 @@ jobs:
         run: |
           cd examples
           ./test.py
+      - name: Integration tests - Examples with legacy WORKSPACE setup
+        run: |
+          cd examples
+          ./test.py --legacy-workspace
