--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,5 +1,6 @@
 module(
     name = "depend_on_what_you_use",
+    # Keep in sync with setup_step_2.bzl
     bazel_compatibility = [">=5.4.0"],
     compatibility_level = 0,
 )
@@ -30,36 +31,13 @@ use_repo(non_module_dependencies, "dwyu_pcpp")
 ### Development Dependencies
 ###
 
-# Update with each rules_python update for easy lookup until specifying the patch version for toolchain is possible again
-# Keep in syc with test/aspect/execute_tests.py
-# PATCH_MAPPING:
-#  "3.10": "3.10.13"
-#  "3.11": "3.11.6"
-#  "3.12": "3.12.0"
-#  "3.8": "3.8.18"
-#  "3.9": "3.9.18"
-# Choose different version via: --@rules_python//python/config_settings:python_version=Major.Minor.Patch mathing one of
-# the registered toolchains below.
 python = use_extension(
     "@rules_python//python/extensions:python.bzl",
     "python",
     dev_dependency = True,
 )
 python.toolchain(
-    is_default = True,
     python_version = "3.8",
-)
-python.toolchain(
-    python_version = "3.9",
-)
-python.toolchain(
-    python_version = "3.10",
-)
-python.toolchain(
-    python_version = "3.11",
-)
-python.toolchain(
-    python_version = "3.12",
 )
 
 pip_dev = use_extension(
@@ -74,22 +52,9 @@ pip_dev.parse(
 )
 use_repo(pip_dev, "dwyu_mypy_deps")
 
-non_module_dev_dependencies = use_extension(
-    "//third_party:extensions.bzl",
-    "non_module_dev_dependencies",
+mypy_dep = use_extension(
+    "//third_party:dev_extensions.bzl",
+    "mypy_dependency",
     dev_dependency = True,
 )
-use_repo(non_module_dev_dependencies, "mypy_integration")
-
-###
-### The Migration phase using WORKSPACE.bzlmod and MODULE.bazel together does not support properly loading the implicit
-### Bazel dependencies. Thus, we need to load some basic things directly. This should become superfluous when we are
-### only using bzlmod eventually
-### Reference https://github.com/bazelbuild/bazel/blob/master/src/MODULE.tools
-###
-
-bazel_dep(
-    name = "platforms",
-    version = "0.0.7",
-    dev_dependency = True,
-)
+use_repo(mypy_dep, "mypy_integration")
