--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Unit tests
         run: bazel test -- //src/... //test/aspect:all //third_party/...
       - name: Execute Mypy
-        run: bazel build --config=mypy -- //src/... //test/aspect:all //test/apply_fixes:all
+        run: bazel build --config=mypy -- //src/... //examples:all //test/aspect:all //test/apply_fixes:all
       - name: Build aspect integration tests
         run: |
           cd test/aspect
