Ruff: Enforce consistent type annotations usage

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,9 +6,10 @@ explicit_package_bases = true
 pretty = true
 # Third party dependencies are not picked up by mypy
 ignore_missing_imports = true
+# Unreliable due to false positives
+warn_return_any = false
 # Additional checks beyond default settings
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
-warn_return_any = true
 warn_unreachable = true
