--- a/examples/.bazelrc
+++ b/examples/.bazelrc
@@ -1,6 +1,6 @@
 # When working with hermetic Python toolchains, supporting the legacy runfiles layout is needlessly wasting resources.
 # See https://github.com/bazelbuild/rules_python/issues/1653
-common --nolegacy_external_runfiles
+# common --nolegacy_external_runfiles
 
 # The symlinks are annoying
 common --experimental_convenience_symlinks=clean
@@ -12,3 +12,6 @@ common --experimental_convenience_symlinks=clean
 # However, there are several open issues suggesting the lock file will change in one way or another.
 # Thus, we don't use the bzlmod locking yet.
 common --lockfile_mode=off
+
+# Easier to use host python in legacy system
+common --noenable_bzlmod
