Use renovate to keep track of mypy
Most likely we won't be able to accept the PRs due to them ignoring the
Bazel part, but at least we are pinged about new versions

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,7 +3,8 @@
   "extends": [
     "config:recommended",
     ":rebaseStalePrs",
-    "schedule:weekends"
+    "schedule:weekends",
+    ":semanticCommits"
   ],
   "labels": [
     "deps"
@@ -14,6 +15,7 @@
   },
   "enabledManagers": [
     "github-actions",
+    "pip_requirements",
     "poetry",
     "pre-commit"
   ]
