--- a/examples/MODULE.bazel
+++ b/examples/MODULE.bazel
@@ -20,7 +20,8 @@ local_path_override(
 
 bazel_dep(
     name = "rules_python",
-    version = "0.27.0",
+    # Keep in sync with //examples/WORKSPACE
+    version = "0.28.0",
     dev_dependency = True,
 )
 
