--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,6 +14,8 @@
     "enabled": true
   },
   "enabledManagers": [
+    "bazel",
+    "bazel-module",
     "github-actions",
     "pip_requirements",
     "poetry",
