--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,16 +42,23 @@ jobs:
   integration-tests-aspect:
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-12 ]
+        os: [ ubuntu-22.04, macos-12, windows-2022 ]
     runs-on: ${{ matrix.os }}
     needs: [ fast-tests ]
     steps:
       - uses: actions/checkout@v4
       - name: Integration tests - Aspect
+        if: runner.os != 'Windows'
         run: |
           cd test
           cd aspect
           python execute_tests.py
+      - name: Integration tests - Aspect
+        if: runner.os == 'Windows'
+        run: |
+          cd test
+          cd aspect
+          python execute_tests.py -b 7.0.0 -p 3.8.18
 
   integration-tests-apply-fixes:
     runs-on: ubuntu-22.04
