--- a/.github/actions/prepare_buildozer/action.yml
+++ b/.github/actions/prepare_buildozer/action.yml
@@ -7,8 +7,9 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: |
-        # Determine buildozer URL
+    - name: Construct buildozer URL
+      shell: bash
+      run: |
         BASE_URL="https://github.com/bazelbuild/buildtools/releases/download/v${{ inputs.version }}"
         if [[ "${RUNNER_OS}" == "Linux" ]]; then
           BUILDOZER_URL="${BASE_URL}/buildozer-linux-amd64"
@@ -20,14 +21,19 @@ runs:
           echo "'${RUNNER_OS}' is not supported"
           exit 1
         fi
-
-        # Download buildozer
-        BUILDOZER_DIR="/tmp/bin"
-        BUILDOZER_PATH="${BUILDOZER_DIR}/buildozer"
-        mkdir -p "${BUILDOZER_DIR}"
-        wget --no-verbose "${BUILDOZER_URL}" -O "${BUILDOZER_PATH}"
+        echo "BUILDOZER_URL=${BUILDOZER_URL}" >> $GITHUB_ENV
+    - name: Setup buildozer
+      if: runner.os != 'Windows'
+      shell: bash
+      run: |
+        wget --no-verbose "${BUILDOZER_URL}" -O "/usr/local/bin/buildozer"
+        chmod +x "/usr/local/bin/buildozer"
+    - name: Setup buildozer
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: |
+        New-Item -Path "D:\" -Name "bin" -ItemType Directory
+        Invoke-WebRequest -Uri $Env:BUILDOZER_URL -OutFile "D:\bin\buildozer.exe"
 
         # Make buildozer available on PATH for subsequent actions
-        chmod +x "${BUILDOZER_PATH}"
-        echo "${BUILDOZER_DIR}" >> $GITHUB_PATH
-      shell: bash
+        echo "D:\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
