--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,7 @@ jobs:
   integration-tests-apply-fixes:
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-12 ]
+        os: [ ubuntu-22.04, macos-12, windows-2022 ]
     runs-on: ${{ matrix.os }}
     needs: [ fast-tests ]
     steps:
