Downgrade rules-python to 0.27.1
We have no need for a newer version and 0.27.1 is the last version still
supporting Bazel 5. Thus, we should use 0.27.1 as DWYU is as well still
supporting Bazel 5.
While tests where green with 0.28.0, we don't want to risk problems in
edge cases currently unknown to us.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -20,5 +20,17 @@
     "pip_requirements",
     "poetry",
     "pre-commit"
+  ],
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "rules_python"
+      ],
+      "matchManagers": [
+        "bazel",
+        "bazel-module"
+      ],
+      "enabled": false
+    }
   ]
 }
