--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,10 +5,6 @@ module(
 )
 
 bazel_dep(
-    name = "bazel_skylib",
-    version = "1.5.0",
-)
-bazel_dep(
     name = "rules_cc",
     version = "0.0.8",
 )
@@ -29,6 +25,12 @@ use_repo(non_module_dependencies, "dwyu_pcpp")
 ###
 ### Development Dependencies
 ###
+
+bazel_dep(
+    name = "bazel_skylib",
+    version = "1.5.0",
+    dev_dependency = True,
+)
 
 python = use_extension(
     "@rules_python//python/extensions:python.bzl",
