chore: Make Renovate aware of all Python requirements files

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,6 +21,11 @@
     "poetry",
     "pre-commit"
   ],
+  "pip_requirements": {
+    "fileMatch": [
+      "(^|/)[\\w-]*requirements([-.]\\w+)?\\.(in|txt)$"
+    ]
+  },
   "packageRules": [
     {
       "matchPackagePatterns": [
