--- a/examples/WORKSPACE
+++ b/examples/WORKSPACE
@@ -14,7 +14,7 @@ load("@depend_on_what_you_use//:setup_step_2.bzl", "setup_step_2")
 setup_step_2()
 
 #
-# One can use DWYU without the content below. The hermetic Python toolchain merely increases the reproducibility when
+# One can use DWYU without the content below. The hermetic Python toolchain increases the reproducibility when
 # executing the examples as integration test.
 #
 
