--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,19 +4,10 @@ module(
     bazel_compatibility = [">=5.4.0"],
 )
 
-bazel_dep(
-    name = "rules_cc",
-    version = "0.0.8",
-)
-bazel_dep(
-    name = "rules_python",
-    version = "0.27.1",
-)
+bazel_dep(name = "rules_cc", version = "0.0.8")
+bazel_dep(name = "rules_python", version = "0.27.1")
 
-non_module_dependencies = use_extension(
-    "//third_party:extensions.bzl",
-    "non_module_dependencies",
-)
+non_module_dependencies = use_extension("//third_party:extensions.bzl", "non_module_dependencies")
 use_repo(non_module_dependencies, "dwyu_pcpp")
 
 ###
@@ -24,20 +15,14 @@ use_repo(non_module_dependencies, "dwyu_pcpp")
 ###
 
 # Keep in sync with third_party/dependencies.bzl
-bazel_dep(
-    name = "bazel_skylib",
-    version = "1.5.0",
-    dev_dependency = True,
-)
+bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
 
 python = use_extension(
     "@rules_python//python/extensions:python.bzl",
     "python",
     dev_dependency = True,
 )
-python.toolchain(
-    python_version = "3.8",
-)
+python.toolchain(python_version = "3.8")
 
 pip = use_extension(
     "@rules_python//python/extensions:pip.bzl",
@@ -51,10 +36,7 @@ pip.parse(
 )
 use_repo(pip, "dwyu_mypy_deps")
 
-bazel_dep(
-    name = "mypy_integration",
-    dev_dependency = True,
-)
+bazel_dep(name = "mypy_integration", dev_dependency = True)
 archive_override(
     module_name = "mypy_integration",
     integrity = "sha256-V1HVImCed4/4/ZdKDoPncNOYZDrceYdvpGW2tCnGfgY=",
