apply_fixes: Improve dependency discovery heuristic
Our old logic fails when multiple dependencies provide a header file
with the same name at different paths.
The new logic is robust against this due to looking for the full include
path. Looking at the file name is now only a fallback used to resolve
cases where include path manipulation makes a simple include path match
impossible.

--- a/test/apply_fixes/missing_dependency/workspace/BUILD
+++ b/test/apply_fixes/missing_dependency/workspace/BUILD
@@ -45,9 +45,21 @@ cc_library(
     deps = [":libs_provider"],
 )
 
+cc_library(
+    name = "use_manipulated_bar",
+    hdrs = ["use_manipulated_bar.h"],
+    deps = [":manipulated_bar_provider"],
+)
+
 ##################
 # Helper Targets #
 ##################
+
+cc_library(
+    name = "manipulated_bar_provider",
+    srcs = ["dummy.h"],
+    deps = ["//libs:manipulated_bar"],
+)
 
 cc_library(
     name = "ambiguous_lib_provider",
