Fix recursive mode breaking when some dependencies are skipped

--- a/test/aspect/recursion/BUILD
+++ b/test/aspect/recursion/BUILD
@@ -45,7 +45,16 @@ cc_library(
     hdrs = ["d.h"],
 )
 
+# Skipping DWYU on this target demonstrates that the recursive analysis and DWYU report aggregation work, even if DWYU
+# is not executed on some targets
 cc_library(
     name = "e",
     hdrs = ["e.h"],
+    tags = ["no-dwyu"],
+    deps = [":f"],  # unused dependency
+)
+
+cc_library(
+    name = "f",
+    hdrs = ["f.h"],
 )
