--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -55,6 +55,12 @@ local_path_override(
     path = "complex_includes/ext_repo",
 )
 
+bazel_dep(name = "skip_external_deps_test_repo", dev_dependency = True)
+local_path_override(
+    module_name = "skip_external_deps_test_repo",
+    path = "skip_external_targets/external_dep",
+)
+
 ##
 ## The Migration phase using WORKSPACE.bzlmod and MODULE.bazel together does not support properly loading the implicit
 ## Bazel dependencies. Thus, we need to load some basic things directly. This should become superfluous when we are
