apply_fixes: Support cquery and custom bazel arguments
Until now the apply_fixes script by default uses `bazel query` to find
missing dependencies. A project might use select statements to exchange
dependencies. In such cases one should use `bazel cquery` to allow the
apply_fixes script to understand the dependency tree properly.
This also requires the user being able to provide arguments to `bazel cquery`.

Refactoring incorporated into this:
- Due to the missing dependency discover logic increasing in complexity,
  we spit it into a separate module
- We output commands as a single string in verbose mode to ease copying
  them for debugging

--- a/src/apply_fixes/BUILD
+++ b/src/apply_fixes/BUILD
@@ -4,8 +4,11 @@ py_library(
     name = "lib",
     srcs = [
         "apply_fixes.py",
+        "bazel_query.py",
         "buildozer_executor.py",
+        "search_missing_deps.py",
         "summary.py",
+        "utils.py",
     ],
     visibility = [":__subpackages__"],
 )
