--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,16 +49,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Integration tests - Aspect
         if: runner.os != 'Windows'
-        run: |
-          cd test
-          cd aspect
-          python execute_tests.py
+        run: python test/aspect/execute_tests.py
       - name: Integration tests - Aspect
         if: runner.os == 'Windows'
-        run: |
-          cd test
-          cd aspect
-          python execute_tests.py -b 7.0.0 -p 3.8.18
+        run: python test/aspect/execute_tests.py -b 7.0.0 -p 3.8.18
 
   integration-tests-apply-fixes:
     strategy:
@@ -72,8 +66,7 @@ jobs:
         with:
           version: '6.4.0'
       - name: Integration tests - Applying fixes
-        run: |
-          python test/apply_fixes/execute_tests.py
+        run: python test/apply_fixes/execute_tests.py
 
   integration-tests-examples:
     strategy:
@@ -84,10 +77,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Integration tests - Examples
-        run: |
-          cd examples
-          python test.py
+        run: python examples/test.py
       - name: Integration tests - Examples with legacy WORKSPACE setup
-        run: |
-          cd examples
-          python test.py --legacy-workspace
+        run: python examples/test.py --legacy-workspace
