--- a/test/aspect/target_mapping/BUILD
+++ b/test/aspect/target_mapping/BUILD
@@ -9,3 +9,9 @@ cc_binary(
     srcs = ["use_lib_c.cpp"],
     deps = ["//target_mapping/libs:a"],
 )
+
+cc_library(
+    name = "use_lib_b_privately",
+    srcs = ["use_lib_b.cpp"],
+    implementation_deps = ["//target_mapping/libs:a"],
+)
