--- a/test/apply_fixes/tool_cli/workspace/BUILD
+++ b/test/apply_fixes/tool_cli/workspace/BUILD
@@ -1,10 +1,19 @@
 cc_library(
     name = "lib",
     hdrs = ["lib.h"],
+    visibility = [":__subpackages__"],
 )
 
 cc_binary(
     name = "binary",
+    srcs = ["binary.cpp"],
+    deps = [
+        ":lib",  # unused
+    ],
+)
+
+cc_binary(
+    name = "another_binary",
     srcs = ["binary.cpp"],
     deps = [
         ":lib",  # unused
