--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -3,7 +3,7 @@ bcr_test_module:
   matrix:
     platform: [ "macos", "ubuntu2004", "windows" ]
     # DWYU supports Bazel 5.4.0, but only via WORKSPACE
-    bazel: [ 6.x, 7.x ]
+    bazel: [ "6.x", "7.x", "rolling" ]
   tasks:
     verify_examples:
       name: "Verify examples"
